# axmouth.dev

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.api.builder  Dockerfile.api.final  Dockerfile.final  Dockerfile.user.client.builder  Dockerfile.user.client.final  docker-compose.yml  docker-deploy.sh  initialize-static-file-volume-permissions.sh
api/: .env.example  Cargo.toml
api/src/: app.rs  auth_tokens.rs  emails.rs  errors.rs  extractors.rs  filters.rs  lib.rs  main.rs  routes.rs  util.rs
api/src/handlers/: admin_logs.rs  auth.rs  blog_comments.rs  blog_post_categories.rs  blog_posts.rs  contact.rs  files.rs  health.rs  links.rs  mod.rs  page_views.rs  project_technologies.rs  projects.rs  search.rs  text_bodies.rs  users.rs
api/templates/emails/reset_password/: reset_password_html.html
api/templates/emails/shared/: email_base_html.html
api/templates/emails/verify_email/: verify_email_html.html
axum-derive/: Cargo.toml
axum-derive/src/: lib.rs
backend_api/: .gitignore  Cargo.toml
backend_api/src/: app.rs  auth_tokens.rs  cookies.rs  db.rs  emails.rs  errors.rs  filters.rs  main.rs  routes.rs  util.rs
backend_api/src/handlers/: admin_logs.rs  auth.rs  blog_comments.rs  blog_post_categories.rs  blog_posts.rs  contact.rs  files.rs  health.rs  links.rs  mod.rs  page_views.rs  project_technologies.rs  projects.rs  search.rs  text_bodies.rs  users.rs
backend_api/templates/emails/reset_password/: reset_password_text.html
backend_api/templates/emails/verify_email/: verify_email_text.html
backend_cli/: .env.example  Cargo.toml
backend_cli/src/: create_super_user.rs  main.rs
backend_repo_pg/: Cargo.toml  diesel.toml
backend_repo_pg/migrations/2020-08-03-140649_initial/: down.sql  up.sql
backend_repo_pg/migrations/2020-08-07-125115_create_home_page_links/: down.sql
backend_repo_pg/migrations/2020-08-07-125715_create_project_technologies/: up.sql
backend_repo_pg/migrations/2020-08-07-130256_create_uploaded_images/: down.sql  up.sql
backend_repo_pg/migrations/2020-08-08-005509_create_text_bodies/: down.sql  up.sql
backend_repo_pg/migrations/2020-08-08-010026_create_verify_email_tokens/: down.sql
backend_repo_pg/migrations/2020-08-08-011955_create_blog_post_comment_ratings/: down.sql
backend_repo_pg/migrations/2020-08-08-012515_create_blog_post_comment_flags/: down.sql  up.sql
backend_repo_pg/migrations/2020-08-26-122112_add_missing_properties/: down.sql  up.sql
backend_repo_pg/migrations/2020-08-26-160604_add_url_to_uploaded_images/: down.sql  up.sql
backend_repo_pg/migrations/2020-09-02-121718_make_post_category_combo_unique/: up.sql
backend_repo_pg/migrations/2020-09-02-122154_make_project_technology_combo_unique/: down.sql  up.sql
backend_repo_pg/migrations/2020-10-18-231549_create_change_pass_tokens/: down.sql
backend_repo_pg/migrations/2021-05-18-173547_expand_page_view_location/: down.sql
backend_repo_pg/migrations/2021-05-23-001655_update_admin_logs/: down.sql
backend_repo_pg/migrations/2021-06-14-154451_create_search/: down.sql  up.sql
backend_repo_pg/migrations/2021-06-15-172019_update_search/: up.sql
backend_repo_pg/src/: admin_logs.rs  blog_comments.rs  blog_post_comment_flags.rs  blog_post_comment_ratings.rs  blog_posts.rs  categories.rs  change_password_tokens.rs  change_sets.rs  errors.rs  extra.rs  filters.rs  health.rs  home_page_links.rs  identification_cookies.rs  insertables.rs  lib.rs  options.rs  page_views.rs  passwords.rs  pg_util.rs  projects.rs  refresh_tokens.rs  schema.rs  schema_extra.rs  search_items.rs  technologies.rs  text_bodies.rs  uploaded_images.rs  users.rs  verify_email_tokens.rs
backend_repo_pg/src/models/: db_models.rs  domain.rs  mod.rs  queries.rs  requests.rs  responses.rs
cli/: Cargo.toml
cli/src/: create_super_user.rs  main.rs
macros/: Cargo.toml
ng-client-admin/: README.md  angular.json  karma.conf.js  package-lock.json  (+2 more)
repo_pg/: .env.example  Cargo.toml
repo_pg/migrations/2020-08-07-123209_create_blog_post_categories/: down.sql  up.sql
repo_pg/migrations/2020-08-07-125115_create_home_page_links/: up.sql
repo_pg/migrations/2020-08-07-125715_create_project_technologies/: down.sql
repo_pg/migrations/2020-08-08-010026_create_verify_email_tokens/: up.sql
repo_pg/migrations/2020-08-08-010542_create_identification_cookies/: down.sql  up.sql
repo_pg/migrations/2020-08-08-011401_create_page_views/: down.sql  up.sql
repo_pg/migrations/2020-08-08-011955_create_blog_post_comment_ratings/: up.sql
repo_pg/migrations/2020-08-08-013446_create_admin_log/: down.sql  up.sql
repo_pg/migrations/2020-09-02-121718_make_post_category_combo_unique/: down.sql
repo_pg/migrations/2020-10-18-231549_create_change_pass_tokens/: up.sql
repo_pg/migrations/2021-05-18-173547_expand_page_view_location/: down.sql  up.sql
repo_pg/migrations/2021-05-23-001655_update_admin_logs/: up.sql
repo_pg/migrations/2021-05-26-114447_add_slug_to_content/: down.sql  up.sql
repo_pg/migrations/2021-06-15-172019_update_search/: down.sql
repo_pg/migrations/2021-06-15-220427_update_search/: down.sql  up.sql
repo_pg/src/: admin_logs.rs  blog_comments.rs  blog_post_comment_ratings.rs  categories.rs  change_password_tokens.rs  change_sets.rs  errors.rs  extra.rs  home_page_links.rs  identification_cookies.rs  insertables.rs  lib.rs  options.rs  page_views.rs  pg_util.rs  projects.rs  refresh_tokens.rs  schema_extra.rs  text_bodies.rs  uploaded_images.rs  users.rs  verify_email_tokens.rs
repo_pg/src/entity/: admin_logs.rs  blog_post_comment_flags.rs  blog_post_comment_ratings.rs  blog_post_comments.rs  blog_posts.rs  blog_posts_categories.rs  categories.rs  change_password_tokens.rs  home_page_links.rs  identification_cookies.rs  mod.rs  page_views.rs  prelude.rs  projects.rs  projects_technologies.rs  refresh_tokens.rs  sea_orm_active_enums.rs  static_pages.rs  technologies.rs  text_bodies.rs  uploaded_images.rs  users.rs  verify_email_tokens.rs
repo_pg/src/models/: db_models.rs  domain.rs  queries.rs  requests.rs
tests/: Cargo.toml
tests/src/: lib.rs  test_suite.rs
(+458 files in other folders)
