[package]
name = "axum-derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "=0.4.5" }
http-body = "=0.4.4"
serde = { version = "=1.0.136", features = ["derive"] }
validator = { version = "=0.14.0", features = ["derive"] }
macros = { path = "../macros" }
thiserror = "=1.0.30"
