[package]
authors = ["Axmouth <aggronfg@yahoo.com>"]
edition = "2018"
name = "backend_api"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backend_repo_pg = {path = "../backend_repo_pg"}
bytes = "0.5"
chrono = "0.4"
dotenv = "0.15"
env_logger = "0.7"
futures = "0.3"
jsonwebtoken = "7"
rand = "0.7"
rust-argon2 = "0.8"
serde = "1"
serde_derive = "1"
serde_json = "1"
tokio = {version = "0.2", features = ["rt-threaded", "time", "stream", "fs", "macros", "uds"]}
uuid = {version = "0.8", features = ["serde", "v4"]}
validator = "0.10"
validator_derive = "0.10"
warp = "0.2.5"
lettre = "0.9"
lettre_email = "0.9"
native-tls = "0.2"
hyper-tls="0.4"