[package]
authors = ["Axmouth <aggronfg@yahoo.com>"]
edition = "2018"
name = "backend_api"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backend_repo_pg = {path = "../backend_repo_pg"}
bytes = "1.0"
chrono = "0.4"
dotenv = "0.15"
env_logger = "0.8"
futures = "0.3"
jsonwebtoken = "7"
rand = "0.8"
rust-argon2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1"
serde_json = "1"
tokio = {version = "1.1", features = ["rt-multi-thread", "time", "fs", "macros"]}
uuid = {version = "0.8", features = ["serde", "v4"]}
validator = "0.12"
validator_derive = "0.12"
warp = "0.3"
lettre = "0.9"
lettre_email = "0.9"
native-tls = "0.2"
hyper-tls="0.5"
tera = "1"
lazy_static = "1"