[package]
name = "backend_cli"
version = "0.1.0"
authors = ["Axmouth <aggronfg@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["rt-threaded", "time", "stream", "fs", "macros", "uds", "blocking"] }
dotenv = "0.15"
serde = "1"
serde_derive = "1"
uuid = { version = "0.7", features = ["serde", "v4"] }
rand = "0.7"
chrono = "0.4"
env_logger = "0.7"
backend_repo_pg = { path = "../backend_repo_pg" }
