[package]
name = "backend_cli"
version = "0.1.0"
authors = ["Axmouth <aggronfg@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.1", features = ["rt-multi-thread", "time", "fs", "macros"] }
dotenv = "0.15"
serde = "1"
serde_derive = "1"
uuid = { version = "0.8", features = ["serde", "v4"] }
rand = "0.8"
chrono = "0.4"
env_logger = "0.8"
backend_repo_pg = { path = "../backend_repo_pg" }
