[package]
name = "backend_repo_pg"
version = "0.1.0"
authors = ["axmouth"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4", features = ["chrono", "postgres", "r2d2", "uuidv07", "serde_json", "uuid"] }
diesel_migrations = "1.4"
r2d2 = "0.8"
tokio = { version = "1.1", features = ["rt-multi-thread", "time", "fs", "macros"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1"
uuid = { version = "0.8", features = ["serde", "v4"] }
rand = "0.8"
env_logger = "0.8"
chrono = { version = "0.4", features = ["serde"] }
validator = "0.12"
validator_derive = "0.12"
rust-argon2 = "0.8"
lazy_static = "1.4"
regex = "1.4"


[target.x86_64-pc-windows-msvc.pq]
rustc-link-search = ["C:\\Program Files\\PostgreSQL\\12\\lib"]